@@ -1747,7 +1747,7 @@ LPARTS=$LPARTS' clos-methcomb1 clos-methcomb2 clos-methcomb3 clos-methcomb4'
 LPARTS=$LPARTS' clos-genfun1 clos-genfun2a clos-genfun2b clos-genfun3 clos-genfun4 clos-genfun5'
 LPARTS=$LPARTS' clos-dependent clos-print clos-custom documentation'
 LPARTS=$LPARTS' fill-out disassem condition loadform gstream xcharin keyboard'
-LPARTS=$LPARTS' screen beossock runprog query reploop dribble complete'
+LPARTS=$LPARTS' screen runprog query reploop dribble complete'
 LPARTS=$LPARTS' pprint describe room edit macros3 clhs inspect gray'
 if [ "${with_threads}" != no ]; then
   LPARTS=$LPARTS' threads'
