@@ -975,110 +975,6 @@ global SOCKET create_client_socket (const char* hostname, unsigned int port,
                         &connect_via_ip,timeout);
 }
 
-/* ================= miscellaneous network related stuff ================= */
-
-/* while TEST collect EXPR into VAL
- can trigger GC */
-#define ARR_TO_LIST(val,test,expr)                      \
-  { int ii; for (ii = 0; test; ii ++) { pushSTACK(expr); } val = listof(ii); }
-
-/* Lisp interface to getservbyport(3) and getservbyname(3) */
-
-#if !defined(UNIX_BEOS)
-
-/* push the contents of SE onto the stack
- 4 values are pushed:
-   s_name
-   list of s_aliases
-   s_port
-   s_proto
- can trigger GC */
-local maygc void servent_to_stack (struct servent * se) {
-  var object tmp;
-  pushSTACK(asciz_to_string(se->s_name,O(misc_encoding)));
-  ARR_TO_LIST(tmp,(se->s_aliases[ii] != NULL),
-              asciz_to_string(se->s_aliases[ii],O(misc_encoding)));
-  pushSTACK(tmp);
-  pushSTACK(L_to_I(ntohs(se->s_port)));
-  pushSTACK(asciz_to_string(se->s_proto,O(misc_encoding)));
-}
-
-LISPFUN(socket_service_port,seclass_read,0,2,norest,nokey,0,NIL)
-/* (SOCKET:SOCKET-SERVICE-PORT &optional service-name protocol)
- NB: Previous versions of this functions
-  - accepted a string containing a number, e.g. "80",
-  - returned NIL when the port does not belong to a named service.
- Sam has changed this. Ask him why.
- sds: for consistency: `service-name': string ==> name; number ==> port number
-      when there is no service associated with a name or a number, an error is
-      signalled, so that whenever this function returns, you can be sure it
-      returns something useful.
- can trigger GC */
-{
-  var object protocol = popSTACK();
-  var const char * proto;
-  if (missingp(protocol))
-    proto = "tcp";
-  else
-    proto = TheAsciz(string_to_asciz(check_string(protocol),
-                                     Symbol_value(S(ascii))));
-
-  var object serv = popSTACK();
-  var struct servent * se;
-  if (missingp(serv) || eq(serv,S(Kdefault))) {
-    var uintL count = 0;
-    #if !defined(WIN32) && !defined(UNIX_CYGWIN32)
-    begin_system_call();
-    for (; (se = getservent()); count++) {
-      end_system_call();
-      servent_to_stack(se);
-      { object vec = vectorof(4); pushSTACK(vec); }
-      begin_system_call();
-    }
-    endservent();
-    end_system_call();
-    #else /* WIN32 does not have getservent() */
-    var uintL port;
-    begin_system_call();
-    for (port = 0; port < 0x10000; port++) {
-      se = getservbyport(port,proto);
-      if (!(se==NULL)) {
-        end_system_call();
-        servent_to_stack(se);
-        { object vec = vectorof(4); pushSTACK(vec); }
-        begin_system_call();
-      }
-    }
-    end_system_call();
-    #endif
-    VALUES1(listof(count));
-  } else if (stringp(serv)) {
-    with_string_0(serv,Symbol_value(S(ascii)),serv_asciz, {
-      begin_system_call();
-      se = getservbyname(serv_asciz,proto);
-      if (se==NULL) {
-        OS_error();
-      }
-      end_system_call();
-    });
-    servent_to_stack(se);
-    funcall(L(values),4);
-  } else if (integerp(serv)) {
-    var uintL port = I_to_UL(serv);
-    begin_system_call();
-    se = getservbyport(htons(port),proto);
-    if (se==NULL) {
-      OS_error();
-    }
-    end_system_call();
-    servent_to_stack(se);
-    funcall(L(values),4);
-  } else
-    fehler_string_integer(serv);
-}
-
-#endif /* !UNIX_BEOS */
-
 #endif /* SOCKET_STREAMS */
 
 #endif /* HAVE_GETHOSTBYNAME */
